--- a/ARBuild/app/build.gradle
+++ b/ARBuild/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.0'
     implementation 'com.android.support:recyclerview-v7:27.1.0'
     implementation 'com.android.support:design:27.1.0'
-    compile 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.google.android.gms:play-services:12.0.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
