--- a/ARBuild/app/src/main/AndroidManifest.xml
+++ b/ARBuild/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
         </activity>
-        <activity android:name=".Test">
+        <activity android:name=".BackendService">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
