Lots of small changes

--- a/ARBuild/app/src/main/AndroidManifest.xml
+++ b/ARBuild/app/src/main/AndroidManifest.xml
@@ -19,9 +19,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BarcodeActivity">
+        <activity android:name=".BarcodeActivity"/>
 
-        </activity>
         <activity
             android:name=".ARStepActivity"
             android:configChanges="orientation|screenSize"
@@ -36,7 +35,6 @@
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
