--- a/api/jeffzh4ng/furniture/package.json
+++ b/api/jeffzh4ng/furniture/package.json
@@ -6,6 +6,7 @@
   "main": "functions/__main__.js",
   "dependencies": {
     "dotenv": "^5.0.1",
+    "lib": "^3.0.2",
     "mongoose": "^5.0.12"
   },
   "private": true,
